# Generate-autounattendxml-files-for-Windows11

./: .gitignore  CLAUDE.md  README.md  generate_unattend.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
Docs/: API仕様書.md  README.md  XML項目リスト.md  インストール手順書.md  システムアーキテクチャ.md  トラブルシューティングガイド.md  設定項目一覧_全23項目.md  詳細仕様書.md  運用ガイド.md
Docs/XML-Document-PowershellVersion/: SubAgentリファレンス.md  インストール手順書.md  インストール手順書_v2.md  コマンドリファレンス.md  システム概要書.md  システム概要書_v2.md  トラブルシューティングガイド.md  トラブルシューティングガイド_v2.md  プリセット設定詳細ガイド.md  設定リファレンス_v2.md  設定リファレンスガイド.md  詳細利用手順書.md  詳細利用手順書_v2.md  開発完了報告書.md
Docs/XML-Document-WebUIversion/: README.md
Docs/XML-Document-WebUIversion/API仕様書/: API仕様.md
Docs/XML-Document-WebUIversion/システム仕様書/: システム詳細仕様.md
Docs/XML-Document-WebUIversion/トラブルシューティング/: 問題解決ガイド.md
Docs/XML-Document-WebUIversion/利用ガイド/: 使い方ガイド.md
Docs/XML-Document-WebUIversion/設定リファレンス/: 設定項目一覧.md
PowerShell/: Generate-UnattendXML-V2.ps1  Generate-UnattendXML.ps1  Generate-UnattendXML.psm1  README.md  Test-ComprehensiveGeneration.ps1  test-debug.ps1
PowerShell/Configs/Presets/: Development.psd1  Enterprise.psd1  Minimal.psd1
PowerShell/Modules/ApplicationConfig/: ApplicationConfig.psm1
PowerShell/Modules/ClaudeFlow/: ClaudeFlow.psm1
WebUI/: Auto-Fix-All-Simple.ps1  Auto-Fix-All.ps1  Auto-Fix-Backend.ps1  Fix-ExecutionPolicy.ps1  Fix-NPM-ExecutionPolicy.ps1  Fix-Port-Conflict.ps1  Launch-System.ps1  Monitor-Servers.ps1  Quick-Fix-Ports.ps1  Quick-Start.ps1  README.md  Rename-Files.ps1  Restart-Backend.ps1  START-HERE.md  Start-Backend-8081.ps1  Start-Backend-Direct.ps1  Start-Frontend.ps1  Start-WebUI-Complete.ps1  Start-WebUI-Enhanced.ps1  Start-WebUI-Full.ps1  Start-WebUI.bat  Start-WebUI.ps1  Stop-WebUI.ps1  Test-Backend.ps1  Test-Connection.ps1  Test-IPDetection.ps1  USAGE.md  start-frontend.bat  test-api.html  test-comprehensive-fix.html  test-fixed-api.html  test-log-generation.html
WebUI/backend/: analyze_xml.ps1  auto_repair_system.py  comprehensive_config_processor.py  comprehensive_log_generator.py  comprehensive_xml_generator.py  config_log_generator.py  config_transformer.py  enhanced_xml_generator.py  final_verification.ps1  main.py  main_simple.py  requirements.txt  requirements_simple.txt  test_comprehensive_all23.xml  test_comprehensive_all_23.py  test_comprehensive_final.xml  test_output.xml  test_xml_generation.py  test_xml_generator.py  verify_all_23_items.ps1  xml_generator.py
WebUI/frontend/: .env.local  Clean-Install.ps1  Start-Frontend-Now.ps1  clean-install.bat  install-and-run.cmd  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
WebUI/playwright/: playwright.config.ts
configs/: example_config.yaml
configs/presets/: development.yaml  enterprise.yaml  minimal.yaml
src/: __init__.py
src/agents/: __init__.py  base_agent.py  domain_agents.py
src/core/: __init__.py  generation_logger.py  validator.py  xml_generator.py
src/modules/: __init__.py  application_config.py  desktop_config.py  network_config.py  user_management.py  wifi_config.py  windows_features.py
src/schemas/: __init__.py
src/templates/: __init__.py
src/utils/: __init__.py
tests/: __init__.py  test_integration.py  test_user_management.py  test_xml_generator.py
(+43 files in other folders)
